--- a/.github/workflows/benchmark-bot.yml
+++ b/.github/workflows/benchmark-bot.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r dev-requirements.txt
 
       - name: Run benchmarks
         id: bench
