--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -48,7 +48,7 @@ jobs:
         pip install -e .
     - name: Install test dependencies
       run: |        
-        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
     - name: pytest
       run: |
          pytest tests dedupe --cov dedupe
